k8sManifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kvstore-service
spec:
  selector:
    app: kvstore
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080   
      targetPort: 8080  
      nodePort: 30000
