k8sManifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvstore-ingress
spec:
  rules:
  - host: kvstore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kvstore-service
            port:
              number: 8080
