k8sManifests/kvstore.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvstore-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: kvstore
  template:
    metadata:
      labels:
        app: kvstore
    spec:
      containers:
      - name: kvstore-container
        image: kvstore:0.1
        #imagePullPolicy: Never
        ports:
        - containerPort: 8080
        readinessProbe:  
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 5  
          periodSeconds: 10      
---
apiVersion: v1
kind: Service
metadata:
  name: kvstore-service
spec:
  selector:
    app: kvstore
  ports:
    - protocol: TCP
      port: 8080   
      targetPort: 8080  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvstore-ingress
spec:
  rules:
  - host: kvstore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kvstore-service
            port:
              number: 8080
